dotnet-kubernetes/backend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productservice
  template:
    metadata:
      labels:
        app: productservice
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: productservice
          image: acseshop121.azurecr.io/productservice:latest
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 8080
              name: http

---
apiVersion: v1
kind: Service
metadata:
  name: eshop-backend
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: productservice
